--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -61,7 +61,7 @@ enable_confirmations = false
 # Use an external OAuth provider. The full list of providers are: `apple`, `azure`, `bitbucket`,
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `keycloak`, `linkedin`, `notion`, `twitch`,
 # `twitter`, `slack`, `spotify`, `workos`, `zoom`.
-[auth.external.apple]
+[auth.external.google]
 enabled = false
 client_id = "13748309255-18gqujks7o27l8ehobsm3gqbq3j9bme6.apps.googleusercontent.com"
 secret = "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"
