--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/supabase-js": "^2.39.2",
     "@types/prismjs": "^1.26.0",
+    "@types/react-router-dom": "^5.3.3",
     "@usermaven/sdk-js": "^1.2.2",
     "axios": "^1.4.0",
     "dompurify": "^3.0.3",
@@ -40,6 +41,7 @@
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
+    "react-router-dom": "^6.26.1",
     "request": "^2.88.2",
     "seobot": "^1.0.8",
     "tailwind-merge": "^1.12.0",
